Rename variables, make them more clear for anderstending, divided the code into functions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="./js.js"></script>
+    <script src="./countstep.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="formErear">
             <form class="formBlock" action="" type="input">
                 <input class="inputForm" type="number" placeholder="pass some value" id="myInput">
-                <input type="button" class="btnCalc" value="CALC" onclick="countSteps()">
+                <input type="button" class="btnCalc" value="CALC" onclick="CombinatoricsChallenge()">
             </form>
             <div class="result" >
                 <h3 id="forResult"> </h3>
